--- a/_retrieval/392LT.md
+++ b/_retrieval/392LT.md
@@ -4,7 +4,7 @@ show_nav: true
 
 title: Record Linkage with LLMs 
 description: >
-        Abhishek Arora and Melissa Dell.  “LinkTransformer: A Unified Package for Record Linkage with Transformer Language Models." [Webpage](https://linktransformer.github.io/), [Paper](https://scholar.harvard.edu/sites/scholar.harvard.edu/files/dell/files/linkt.pdf), [Github](https://github.com/dell-research-harvard/linktransformer)
+        LinkTransformer allows the use of language models for record linkage" [Webpage](https://linktransformer.github.io/), [Paper](https://scholar.harvard.edu/sites/scholar.harvard.edu/files/dell/files/linkt.pdf), [Github](https://github.com/dell-research-harvard/linktransformer), [Intoductory Notebook](https://colab.research.google.com/drive/1SAvQdgYiX2CinoTC8Y5qtKScNwx3DYXf#scrollTo=jR0-0I6jPm2S), [Training Deep-Dive]([ttps://colab.research.google.com/drive/1tHitPGjMMI2Nvh4wwA8rdcbYfbLaJDvg](https://colab.research.google.com/drive/1tHitPGjMMI2Nvh4wwA8rdcbYfbLaJDvg))
 keywords: transformers, record linkage, data wrangling
 image_small: /assets/publications/lt_image.png
 
