--- a/_posts/2021-01-23-about.md
+++ b/_posts/2021-01-23-about.md
@@ -9,7 +9,7 @@ mathjax: true
 
 ---
 
-This knowledgebase shares the information and references compiled for the PhD course: [Unleashing Novel Data at Scale]({% link teaching/economics-2355.md %}) (spring 2023). I first taught this course in 2021 as a major pandemic project, born from the observation that many important social science questions remain unanswered, in substantial part because the data required to examine them has traditionally been inaccessible. Sometimes data may be inaccessible because it is trapped in hard copy document scans or other types of image data; other times, information can be scattered throughout vast reams of text. Processing unstructured data is particularly challenging for lower resource settings, meaning that economics oftentimes doesn't fully explore the diversity of human socieities. Recent advances in deep learning offer enormous potential to convert raw unstructured information into computable data at scale, including for low resource settings. 
+This knowledgebase shares the information and references compiled for the PhD course: [Unleashing Novel Data at Scale]({% link _teaching/economics-2355.md %}) (spring 2023). I first taught this course in 2021 as a major pandemic project, born from the observation that many important social science questions remain unanswered, in substantial part because the data required to examine them has traditionally been inaccessible. Sometimes data may be inaccessible because it is trapped in hard copy document scans or other types of image data; other times, information can be scattered throughout vast reams of text. Processing unstructured data is particularly challenging for lower resource settings, meaning that economics oftentimes doesn't fully explore the diversity of human socieities. Recent advances in deep learning offer enormous potential to convert raw unstructured information into computable data at scale, including for low resource settings. 
 
 This knowledgebase consists of material from 18 lectures covering recent advances in computer vision and natural language processing, applied to social science data curation. The course was completely redesigned in 2023, with many of the covered papers being published since it was last offered in 2021. 
 
