--- a/_classification/200NER.md
+++ b/_classification/200NER.md
@@ -6,8 +6,7 @@ title: Named Entity Recognition
 description: >
     Coming Soon
 keywords: ner, entity, recognition
-image_small: /assets/publications/rl.png
-
+image_small: /assets/coming_soon.png
 
 ---
 
