Fixed typos and removed test content

--- a/_posts/2023-01-21-lecture4.md
+++ b/_posts/2023-01-21-lecture4.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 description: >
-    Letcure 4: Covers transformer architecture in general and begins discussion on transformer language models 
+    Lecture 4: Covers transformer architecture in general and begins discussion on transformer language models 
 title: The Transformer
 category: intro
 tags: [deep learning]
