--- a/_posts/2023-01-22-lecture5.md
+++ b/_posts/2023-01-22-lecture5.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 description: >
-    Letcure 5: Transformer language models 
+    Lecture 5: Transformer language models 
 title: More on Transformer Language Models
 category: intro
 tags: [deep learning]
