--- a/_posts/2023-01-23-lecture6.md
+++ b/_posts/2023-01-23-lecture6.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 description: >
-    Letcure 6: Vision and Audio Transformers
+    Lecture 6: Vision and Audio Transformers
 title: Vision and Audio Transformers
 category: intro
 tags: [deep learning]
