--- a/_posts/2023-01-24-lecture7.md
+++ b/_posts/2023-01-24-lecture7.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 description: >
-    Letcure 7: Covers the basics of training and optimizing neural networks
+    Lecture 7: Covers the basics of training and optimizing neural networks
 title: Basics of Training and Optimizing Neural Networks
 category: intro
 tags: [deep learning]
