--- a/_posts/2023-02-23-lecture8.md
+++ b/_posts/2023-02-23-lecture8.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 description: >
-    Letcure 8: Covers Contrastive Learning: Contrastive loss functions and associated model architectures. 
+    Lecture 8: Covers Contrastive Learning: Contrastive loss functions and associated model architectures. 
 title: Contrastive Learning
 category: intro
 tags: [deep learning]
