--- a/_posts/2023-03-02-lecture11.md
+++ b/_posts/2023-03-02-lecture11.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 description: >
-    Letcure 11: Semantic and Syntactic Similarity 
+    Lecture 11: Semantic and Syntactic Similarity 
 title: Semantic and Syntacting Similarity
 category: intro
 tags: [deep learning]
