--- a/_posts/2023-03-20-lecture12.md
+++ b/_posts/2023-03-20-lecture12.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 description: >
-    Letcure 12: Text Retrieval
+    Lecture 12: Text Retrieval
 title: Text Retrieval
 category: intro
 tags: [deep learning]
