--- a/_posts/2023-03-21-lecture13.md
+++ b/_posts/2023-03-21-lecture13.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 description: >
-    Letcure 13: Entity Linking (NER and Entity Disambiguation)
+    Lecture 13: Entity Linking (NER and Entity Disambiguation)
 title: Entity Linking
 category: intro
 image: /assets/blogs/lecture_13.png
