--- a/_posts/2023-03-22-lecture14.md
+++ b/_posts/2023-03-22-lecture14.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 description: >
-    Letcure 14: Topic and Sentiment Classification
+    Lecture 14: Topic and Sentiment Classification
 title: Topic and Sentiment Classification
 category: intro
 image: /assets/blogs/lecture_14.jpg
