--- a/_posts/2023-03-23-lecture15.md
+++ b/_posts/2023-03-23-lecture15.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 description: >
-    Letcure 15: Object Detection and Document Image Analysis
+    Lecture 15: Object Detection and Document Image Analysis
 title: Object Detection
 category: intro
 image: /assets/blogs/lecture_15.png
