--- a/_posts/2023-03-24-lecture16.md
+++ b/_posts/2023-03-24-lecture16.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 description: >
-    Letcure 16: OCR and Record Linkage
+    Lecture 16: OCR and Record Linkage
 title: OCR and Record Linkage
 category: intro
 image: /assets/blogs/lecture_16.png
