--- a/_posts/2023-03-25-lecture17.md
+++ b/_posts/2023-03-25-lecture17.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 description: >
-    Letcure 17: Diffusion Models and GANs
+    Lecture 17: Diffusion Models and GANs
 title: Diffusion and GANs
 category: intro
 image: /assets/blogs/lecture_17.png
