--- a/_posts/2023-03-26-lecture18.md
+++ b/_posts/2023-03-26-lecture18.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 description: >
-    Letcure 18: Remote Sensing
+    Lecture 18: Remote Sensing
 title: Remote Sensing
 category: intro
 image: /assets/blogs/lecture_18.jpg
