--- a/_posts/2023-02-24-lecture9.md
+++ b/_posts/2023-02-24-lecture9.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 description: >
-    Letcure 9: Prompt and Prefix Tuning 
+    Lecture 9: Prompt and Prefix Tuning 
 title: Prompt and Prefix Tuning
 category: intro
 tags: [deep learning]
